<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme_night">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="support_message">Написать в поддержку</string>
    <string name="therms_use">Пользовательское соглашение</string>
    <string name="in_search">Вы попали в поиск</string>
    <string name="in_media">Вы попали в медиатеку</string>
    <string name="share_app_text">Привет! Ознакомься с курсом по Андроид-разработке в Практикуме: https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">gnesnydmitry@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="no_email_client">Нет почтового клиента на устройстве</string>
    <string name="url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="text_for_placeholder_no_connection">Проблемы со связью \n\n Загрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="text_for_placeholder_nothing_found">Ничего не нашлось</string>
    <string name="text_for_btn_update">Обновить</string>
    <string name="history_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="timer" translatable="false">00:00</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="duration_track">03:00</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_for_album">Название*</string>
    <string name="description_for_album">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="change_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="open">Открыть</string>
    <string name="placeholder">плейсхолдер</string>

    <plurals name="track_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>