<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_frag"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".setting.ui.SettingFrag"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_root_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/settings_root_text"
            android:textSize="@dimen/size_22sp"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="500"/>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:text="@string/theme_night"
        android:textColor="@color/settings_root_text"
        android:theme="@style/MySwitch"
        android:textAppearance="@style/MyStyle.Switch"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:id="@+id/btn_share_app"
        style="@style/ButtonForSettings"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/share_app" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:id="@+id/btn_contact_support"
        style="@style/ButtonForSettings"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/support_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:id="@+id/btn_therms_use"
        style="@style/ButtonForSettings"
        android:drawableEnd="@drawable/ic_go_to"
        android:text="@string/therms_use" />

</androidx.appcompat.widget.LinearLayoutCompat>