<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_root"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_root_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/search"
            android:textColor="@color/search_root_text"
            android:textFontWeight="500"
            android:textSize="@dimen/size_22sp" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_8sp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_8sp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_search_root"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_36dp"
            android:autofillHints="auto"
            android:background="@drawable/shape_edittext"
            android:drawableStart="@drawable/ic_search_14"
            android:drawablePadding="@dimen/size_10dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textAutoCorrect"
            android:lines="1"
            android:maxLength="50"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/edittext_text_search_root"
            android:textSize="@dimen/size_16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:background="@drawable/shape_ic_close"
            android:src="@drawable/ic_clear_text"
            android:visibility="visible" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/placeholder_no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="102dp"
            android:src="@drawable/ic_placeholder_no_connection" />

        <TextView
            style="@style/text_placeholder_for_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_for_placeholder_no_connection"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_for_btn_update"
            android:textColor="@color/text_btn_update"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/size_14sp"
            android:background="@drawable/ripple_for_btn_update"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_nothing_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="102dp"
            android:src="@drawable/ic_placeholder_nothing_found" />

        <TextView
            style="@style/text_placeholder_for_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_for_placeholder_nothing_found"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_16sp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>