<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_interface"
    tools:context=".search.ui.SearchFrag">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_root_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/search"
            android:textColor="@color/search_root_text"
            android:textFontWeight="500"
            android:textSize="@dimen/size_22sp" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/edittext_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_8sp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_8sp"
        app:layout_constraintTop_toBottomOf="@+id/search_root_toolbar">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_search_root"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_36dp"
            android:autofillHints="auto"
            android:background="@drawable/shape_edittext"
            android:drawableStart="@drawable/ic_search_14"
            android:drawablePadding="@dimen/size_10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textAutoCorrect"
            android:lines="1"
            android:maxLength="50"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/edittext_text_search_root"
            android:textCursorDrawable="@drawable/cursor_edittext"
            android:textSize="@dimen/size_16sp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/icon_clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:background="@drawable/shape_ic_close"
            android:src="@drawable/ic_clear_text"
            android:visibility="gone" />

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/placeholder_no_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_container"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_placeholder_no_connection" />

        <TextView
            style="@style/text_placeholder_for_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/text_for_placeholder_no_connection" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_24dp"
            android:background="@drawable/ripple_for_rounded_btn"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/text_for_btn_update"
            android:textAllCaps="false"
            android:textColor="@color/text_for_rounded_btn"
            android:textSize="@dimen/size_14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/placeholder_nothing_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_container"
        app:layout_constraintVertical_bias="0.3">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_placeholder_nothing_found" />

        <TextView
            style="@style/text_placeholder_for_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/text_for_placeholder_nothing_found" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/header_search_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_46dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/history_search"
        android:textColor="@color/search_root_text"
        android:textSize="@dimen/size_19sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_container"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16sp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_clear_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_search_root"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clear_history"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="@dimen/size_16dp"
        android:background="@drawable/shape_clear_history_btn"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/clear_history"
        android:textAllCaps="false"
        android:textColor="@color/search_root_btn_text"
        android:textSize="@dimen/size_14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/progress_bar_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/search_frag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_container" />


</androidx.constraintlayout.widget.ConstraintLayout>